# probably-fine-capital

./: .env.example  .gitignore  claude.md  config.py  handoff.md  main.py  pyproject.toml
agents/: macro_analyst.py  momentum_analyst.py  portfolio_manager.py  reporter.py  research_desk.py  risk_manager.py  sentiment_analyst.py  trader.py
core/: fund_state.py  loop.py  market_data.py  models.py
tests/: test_llm.py  test_loop.py  test_macro_analyst.py  test_momentum_analyst.py  test_portfolio_manager.py  test_reporter.py  test_reporter_x.py  test_research_desk.py  test_risk_manager.py  test_sentiment_analyst.py  test_trader.py
utils/: kraken_cli.py  llm.py  logger.py
