[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probably-fine-capital"
version = "0.1.0"
description = "AI-native hedge fund trading tokenized US stocks on Kraken 24/7"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "openai>=1.30",       # Fireworks AI is OpenAI-compatible
    "tweepy>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
